# wgpu-virtual-texturing

./: '  Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  pipelines.rs  prepass.wgsl  setup.rs  shader.wgsl  storage.rs  streaming.rs  texture_generation.rs  textures.rs  vertex.rs
src/storage/: mip_generator.rs
