[package]
name = "virt-texture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
winit = "0.28"
bytemuck = { version = "1", features = ["derive"] }
nalgebra = "0.32"
pollster = "0.3"
thiserror = "=1.0.40"
miniserde = "0.1"
image = "0.24"

[dev-dependencies]
assert_fs = "1"
predicates = "3"

[profile.bench]
debug = true
