[package]
name = "virt-texture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18"
winit = {version = "0.29", features = ["rwh_05"]}
bytemuck = { version = "1", features = ["derive"] }
nalgebra = "0.32"
pollster = "0.3"
thiserror = "1"
miniserde = "0.1"
image = "0.24"
log = "0.4"

[dev-dependencies]
assert_fs = "1"
predicates = "3"
env_logger = "0.10"

# [profile.release]
# debug = true
